new files for better category

--- a/style/style.css
+++ b/style/style.css
@@ -21,3 +21,5 @@
 @import url(./header.css);
 @import url(./board_resp.css);
 @import url(./task_overlay_resp.css);
+@import url(./edit_task.css);
+@import url(./edit_task_resp.css);
