--- a/style/add_task.css
+++ b/style/add_task.css
@@ -621,10 +621,13 @@
     height: 96px;
 }
 
+.h-80,
+.subtasks-container {
+    transition: height 150ms ease-out;
+}
+
 .h-80 {
     height: 80px;
-    transition: height 150ms ease-out;
-
     position: relative;
 }
 
