--- a/style/add_task.css
+++ b/style/add_task.css
@@ -18,6 +18,7 @@
     display: flex;
     flex-direction: column;
     animation: blendIn 0.2s ease-in-out;
+    height: auto;
 }
 
 .add-task-form-subtasks-dropdown-subtasks {
