--- a/style/add_task_overlay.css
+++ b/style/add_task_overlay.css
@@ -44,6 +44,22 @@
     color: #FFFFFF;
 }
 
+.task-added-overlay-board{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #2A3647;
+    padding: 16px 24px;
+    border-radius: 24px;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    z-index: 3;
+}
+
 
 
 @keyframes fadeInCreatedTaskMsg {
