--- a/style/contacts_overlay.css
+++ b/style/contacts_overlay.css
@@ -36,15 +36,37 @@
 }
 
 .overlay-shadow-pos-rel-container {
-    position: relative;
+    /* position: relative; */
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    background-color: rgba(0, 0, 0, 0.2);
 }
 
+
+
 .overlay-edit-contact-card-container {
-    background-color: rgba(0, 0, 0, 0.2);
+    /* background-color: rgba(0, 0, 0, 0.2); */
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    /* position: relative; */
+    
+}
+
+.overlay-contacts-card-container {
+   max-width: 1440px;
+    max-height: 1024px;
+    width: 100%;
+    height: 100%;
+    position: relative;
 }
 
 .overlay-card {
     position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 8%;
     height: 594px;
     width: 1212px;
     border-radius: 31px;
