--- a/style/contacts_overlay_responsiv.css
+++ b/style/contacts_overlay_responsiv.css
@@ -30,8 +30,9 @@
         height: 80%;
         width: 396px;
         flex-direction: column;
+        left: 50%;
+        transform: translate(-50%, -50%);
     }
-
 
     .overlay-left-side {
         border-radius: 30px 30px 0 0;
