--- a/style/style.css
+++ b/style/style.css
@@ -16,6 +16,8 @@
 @import url(./contacts_overlay_responsiv.css);
 @import url(./overlay_board_template.css);
 @import url(./add_task.css);
+@import url(./add_task_buttons.css);
+@import url(./add_task_inputs.css);
 @import url(./add_task_overlay.css);
 @import url(./add_task_responsive.css);
 @import url(./header.css);
