fixed issue by small- height (704px)

--- a/style/contacts_responsiv.css
+++ b/style/contacts_responsiv.css
@@ -387,3 +387,13 @@
         left: 5%;
     }
 }
+
+@media(max-height : 704px) {
+    .succes-created-container {
+        position: unset;
+    }
+
+    .creates-msg {
+        top: 50%;
+    }
+}
