--- a/style/login.css
+++ b/style/login.css
@@ -4,7 +4,7 @@ body {
 }
 
 /* animation overlay design and align */
-.overlay_animation {
+.animation_background {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -29,6 +29,7 @@ body {
     align-items: center;
     animation: slideMidToLeft 1s forwards;
     animation-timing-function: cubic-bezier(.50, 0, 0, 0);
+    z-index: 2;
 }
 
 /* main design and align / basic background */
