--- a/style/contacts_responsiv.css
+++ b/style/contacts_responsiv.css
@@ -3,6 +3,10 @@
         width: 84%;
     }
 
+    .contact-list-area {
+        height: calc(100vh - 160px);
+    }
+
     .contacts-contact-section {
         width: calc(100vw - 456px);
     }
@@ -116,7 +120,6 @@
 
     .contact-list-area {
         margin-top: 80px;
-        height: calc(100vh - 160px);
     }
 
     .contacts-contact-section {
@@ -169,6 +172,9 @@
 }
 
 @media (max-width: 525px) {
+
+    
+
     .contact-list-container {
         position: relative;
     }
