--- a/style/overlay_board_template.css
+++ b/style/overlay_board_template.css
@@ -7,6 +7,7 @@
     display: flex;
     flex-direction: column;
     padding: 48px;
+    overflow: auto;
 }
 
 .add-task-form-overlay {
@@ -94,6 +95,10 @@
 
 .add-task-form-subtasks-dropdown-subtasks-item input{
     outline: none;
+}
+
+.padding-bottom-0 {
+    padding-bottom: 0 !important;
 }
 
 @media (max-width: 1050px) {
