--- a/style/sign_up.css
+++ b/style/sign_up.css
@@ -140,6 +140,7 @@
 }
 
 .sign_up_section .sign_up_input_group .privacy_policy_checkbox_group .pp_checkbox {
+    height: 18px;
     cursor: pointer;
 }
 
@@ -153,8 +154,8 @@
 }
 
 .red_border {
-    outline: 1px solid red !important;
-    border-radius: 10px;    
+    border: 2px solid red !important;
+    border-radius: 5px;
 }
 
 /* span design inside input group */
@@ -216,7 +217,7 @@
 .signup-overlay-background dialog {
     color: white;
     display: flex;
-        left: 50%;
+    left: 50%;
     bottom: 50%;
     transform: translate(-50%, -50%);
     animation: slideInFromBottom 1s;
