--- a/style/style.css
+++ b/style/style.css
@@ -9,7 +9,7 @@
 @import url(./login.css);
 @import url(./sign_up.css);
 @import url(./keyframes.css);
-@import url(./responsive.css);
+@import url(./login_responsive.css);
 @import url(./contacts_keyframes.css);
 @import url(./contacts_responsiv.css);
 @import url(./contacts_overlay.css);
