summary fonts not smaller than 16px, removed height in resp Help

--- a/style/help.css
+++ b/style/help.css
@@ -121,6 +121,13 @@
 /* ===== Breakpoints ===== */
 @media (max-width: 992px) {
   .help section {
+    height: auto;
+  }
+}
+
+/* ===== Breakpoints ===== */
+@media (max-width: 992px) {
+  .help section {
     min-height: auto;
   }
 
