--- a/style/contacts_responsiv.css
+++ b/style/contacts_responsiv.css
@@ -88,7 +88,7 @@
 
     .contact-circle-img-big {
         height: 100px;
-        width: 100px;
+        min-width: 100px;
     }
 
     .contact-circle-img-big>p {
@@ -202,7 +202,7 @@
 
     .contact-circle-img-big {
         height: 80px;
-        width: 80px;
+        min-width: 80px;
     }
 
     .contact-circle-img-big>p {
@@ -246,11 +246,6 @@
 
     .contact-info-big {
         gap: 20px;
-    }
-
-    .contact-circle-img-big {
-        height: 80px;
-        width: 80px;
     }
 
     .contact-circle-img-big>p {
@@ -377,7 +372,7 @@
 
     .contact-circle-img-big {
         height: 60px;
-        width: 60px;
+        min-width: 60px;
     }
 
     .contact-circle-img-big>p {
