--- a/style/contacts_template.css
+++ b/style/contacts_template.css
@@ -38,7 +38,7 @@
     justify-content: center;
     align-items: center;
     height: 120px;
-    width: 120px;
+    min-width: 120px;
     border-radius: 50%;
     border: 3px solid white;
 }
